# OTUS_Basic_DZ_08

./: .gitignore  CMakeLists.txt  FindWords.cpp  README.md
header/: ThrObj.h
src/: FindWords.cpp  ThrObj.cpp
